--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github-pwd12.github.chrome/todo-list",
+  "homepage": "https://github-pwd12.github.io/todo",
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
@@ -22,8 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy":"gh-pages -d build"
-    
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
